fixe des warns pour Jinx